# whoopsie

./: .gitignore  Cargo.toml  README.md
.github/workflows/: markdown-autodocs.yml
examples/: asynchronous.rs  backoff_with_constant_time.rs  backoff_with_exponential_time.rs  random_http_status.rs
src/: backoff.rs  backoff_test.rs  circuit_breaker.rs  circuit_breaker_test.rs  fixtures.rs  lib.rs
