[package]
name = "whoopsie"
edition = "2021"
authors = ["Alexis Bekhdadi <alexis@bekhdadi.com>"]
license = "Apache-2.0"
description = "An implementation of backoff strategies combined with a circuit breaker for error management and system resilience."
repository = "https://github.com/midoriiro/whoopsie.git"
documentation = ""
keywords = ["backoff", "circuit", "breaker"]
version = "0.1.0"

[dependencies]
tokio = { version = "1.43", features = ["full"], optional = true }

[dev-dependencies]
rstest = "0.24"
async-std = { version = "1.13", features = ["attributes"] }
reqwest = { version = "0.12", features = ["blocking"] }
rand = "0.9"

[features]
default = []
async = ["dep:tokio"]

[[example]]
name = "random_http_status"

[[example]]
name = "backoff_with_constant_time"

[[example]]
name = "backoff_with_exponential_time"

[[example]]
name = "asynchronous"
required-features = ["async"]